<resources>
    <string name="app_name">ERP project</string>
    <string name="Company_name">company_name.org</string>
    <string name="Welcome_message">Welcome </string>
    <string name="or">or</string>
    <string name="worker">Worker</string>
    <string name="Admin">Admin</string>
    <string name="home_instructions">Select based on your access level</string>
    <string name="worker_login">Worker Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="login">Login</string>
    <string name="worker_id">Worker id</string>
    <string name="admin_id">Admin id</string>
    <string name="pin">Pin</string>
    <string name="password">Password</string>
    <string name="worker_id_hint">Enter your worker id</string>
    <string name="admin_id_hint">Enter your admin id</string>
    <string name="worker_password_hint">Enter your 4 digit pin</string>
    <string name="admin_password_hint">Enter your password</string>
    <string name="apply_loan">Apply for loan</string>
    <string name="apply_vacation">Apply for vacation</string>
    <string name="logout">logout</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="Menu">☰</string>
    <string name="john_doe">John Doe</string>
    <string name="operations">Operations</string>
    <string name="supervisor">Supervisor</string>
    <string name="worker_dashboard">Worker Dashboard</string>
    <string name="apply_for_loan">Apply for Loan</string>
    <string name="apply_for_vacation">Apply for Vacation</string>
    <string name="announcements">Announcements</string>
    <string name="no_new_announcements_at_the_moment">No new announcements at the moment.</string>
    <string name="profile_image">Profile image</string>
    <string name="change_password">change password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_the_loan_amount">Enter the loan amount</string>
    <string name="loan_application">Loan Application</string>
    <string name="how_much_do_you_want_to_loan">How much do you want to loan?</string>
    <string name="why_do_you_need_the_loan">Why do you need the loan?</string>
    <string name="how_many_months_will_it_take_you_to_pay_back">How many months will it take you to pay back</string>
    <string name="apply">Apply</string>
    <string name="select_the_amount_of_months">Select the Amount of months</string>
    <string name="give_a_short_and_concise_reason">Give a short and concise reason</string>
    <string name="salary_50_000">Salary: 50,000</string>
    <string name="debt_15_000">Debt: 15,000</string>
    <string name="you_haven_t_applied_for_a_loan_yet">You haven\'t applied for a loan yet</string>
    <string name="vacation_application">Vacation Application</string>
    <string name="what_s_the_duration_of_you_vacation">What\'s the duration of you vacation</string>
    <string name="why_are_you_taking_a_vacation">Why are you taking a vacation?</string>
    <string name="enter_the_duration_in_days">Enter the duration in days</string>
    <string name="vacation_days_left_80">Vacation days left:80</string>
    <string name="you_havent_applied_for_a_vacaton_yet">You havent applied for a vacaton yet</string>
    <string name="id_wrk001">ID: WRK001</string>
    <string name="department_finance">Department: Finance</string>
    <string name="role_manager">Role: Manager</string>
    <string name="recent_workers">Recent Workers</string>
    <string name="payroll">Payroll</string>
    <string name="workers">Workers</string>
    <string name="vacation">Vacation</string>
    <string name="pending_vacations_12">Pending Vacations: 12</string>
    <string name="pending_loans_12">Pending Loans: 12</string>
    <string name="wokers_in_department_20">Wokers in department:20</string>
    <string name="loan">LOAN</string>
    <string name="add_worker">Add Worker</string>
    <string name="delete_all_workers">Delete All Workers</string>
    <string name="role">Role</string>
    <string name="age">Age</string>
    <string name="bank_account">Bank Account</string>
    <string name="enter_worker_s_bank_account">Enter Worker\'s Bank Account</string>
    <string name="isadmin">IsAdmin?</string>
    <string name="department">Department</string>
    <string name="gender">Gender</string>
    <string name="name">name</string>
    <string name="enter_worker_s_name">Enter Worker\'s Name</string>
    <string name="enter_worker_s_department">Enter worker\'s department</string>
    <string name="salary">Salary</string>
    <string name="enter_worker_s_age">Enter worker\'s Age</string>
    <string name="enter_worker_s_gender">Enter Worker\'s Gender</string>
    <string name="worker_is_advised_to_change_entered_password">Worker is advised to change entered password</string>
    <string name="enter_worker_s_role">Enter Worker\'s Role</string>
    <string name="enter_worker_s_salary">Enter worker\'s salary</string>
    <string name="create_worker">Create Worker</string>
    <string name="cancel">Cancel</string>
    <string name="worker_profile_picture">worker profile picture</string>
    <string name="debt">Debt</string>
    <string name="delete_worker">Delete Worker</string>
    <string name="delete_all_vacations">Delete all vacations</string>
    <string name="status">Status:</string>
    <string name="worker_name">Worker Name:</string>
    <string name="worker_id2">Worker ID:</string>
    <string name="loan_amount">Loan Amount:</string>
    <string name="effective_salary">Effective Salary:</string>
    <string name="current_debt">Current Debt:</string>
    <string name="date_applied">Date Applied:</string>
    <string name="loan_reason">Loan Reason:</string>
    <string name="view_worker">View Worker</string>
    <string name="approve_loan">Approve Loan</string>
    <string name="reject_loan">Reject Loan</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="close">Close</string>
    <string name="enter_title">Enter title...</string>
    <string name="enter_announcement">Enter announcement...</string>
    <string name="make_announcement">Make Announcement</string>
    <string name="duration">Duration(Days):</string>
    <string name="vacation_period_days">Vacation Period(Days):</string>
    <string name="vacation_days_left">Vacation Days Left:</string>
    <string name="vacation_reason">Vacation Reason</string>
    <string name="last_vacation">Last Vacation:</string>
    <string name="reject_vacation">Reject Vacation</string>
    <string name="approve_vacation">Approve Vacation</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="mark_workers_absent">Mark Workers Absent</string>
    <string name="check_in_time">Check In Time</string>
    <string name="check_out_time">Check Out Time</string>
    <string name="new_announcement">New Announcement</string>
    <string name="add">+</string>
    <string name="update_worker">Update Worker</string>
    <string name="attendance_score">Attendance Score</string>
    <string name="_1_000">$1,000</string>
    <string name="delete_all_loans">Delete all loans</string>
    <string name="search_for_worker">Search for worker</string>


</resources>
