<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:padding="16dp">


    <TextView
        android:id="@+id/chang_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/old_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_old_password"
        android:inputType="textPassword"
        android:textColorHint="#333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chang_password_title" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/confirm_the_password"
        android:inputType="textPassword"
        android:textColorHint="#333333"
        app:layout_constraintEnd_toEndOf="@+id/new_password_input"
        app:layout_constraintStart_toStartOf="@+id/new_password_input"
        app:layout_constraintTop_toBottomOf="@+id/new_password_input" />

    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_your_new_password"
        android:inputType="textPassword"
        android:textColorHint="#333333"
        app:layout_constraintEnd_toEndOf="@+id/old_password_input"
        app:layout_constraintStart_toStartOf="@+id/old_password_input"
        app:layout_constraintTop_toBottomOf="@+id/old_password_input" />

    <TextView
        android:id="@+id/old_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/old_password_input"
        app:layout_constraintStart_toStartOf="@+id/old_password_input" />

    <TextView
        android:id="@+id/confirm_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_input"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_input" />

    <TextView
        android:id="@+id/new_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/new_password_input"
        app:layout_constraintStart_toStartOf="@+id/new_password_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password_button"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#E44646"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_input"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_input"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input" />
</androidx.constraintlayout.widget.ConstraintLayout>