<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!-- LEFT COLUMN -->
    <LinearLayout
        android:id="@+id/leftColumn"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightColumn"
        android:layout_marginEnd="12dp">

        <TextView
            android:id="@+id/tvWorkerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/john_doe"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWorkerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_wrk001"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <!-- RIGHT COLUMN -->
    <LinearLayout
        android:id="@+id/rightColumn"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftColumn">

        <TextView
            android:id="@+id/tvWorkerDept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_finance"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWorkerRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_manager"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
